--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>bootbox.js</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
