--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    <!-- Não é obrigatório - Gera APIS automaticamente
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-rest</artifactId>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -88,6 +89,16 @@
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.3.0</version>
+    </dependency>
+    <dependency>        
+      <groupId>io.springfox</groupId>        
+      <artifactId>springfox-swagger2</artifactId>        
+      <version>2.9.2</version>    
+    </dependency>    
+    <dependency>        
+      <groupId>io.springfox</groupId>        
+      <artifactId>springfox-swagger-ui</artifactId>        
+      <version>2.9.2</version>    
     </dependency>
   </dependencies>
   <build>
