--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,4 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?useTimezone=true
+spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?useTimezone=true&requireSSL=false
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
